--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+# Ignore the virtual environment folder
+venv/
+.env
+
+# Ignore compiled python files
+__pycache__/
+*.pyc
+
+# Ignore system files
+.DS_Store
+
 Results/
 output/
