saving good json layout

--- a/converting_rules.yaml
+++ b/converting_rules.yaml
@@ -1,94 +1,112 @@
 role: "Expert LaTeX Beamer Developer"
-objective: "Convert Markdown content + Layout Data into a high-quality LaTeX Beamer presentation."
+objective: "Render a professional Beamer presentation strictly following the provided layout instructions."
 
 # -----------------------------------------------------------------
-# 1. SETUP & PACKAGES
+# 1. INPUT UNDERSTANDING
 # -----------------------------------------------------------------
-praeambel:
-  includes:
-    - \documentclass[10pt]{beamer}
+input_structure:
+  presentation_meta: 'Metadata for \title, \author, \date, \institute.'
+  slides:
+    - "layout_analysis": Title and Header info.
+    - "llm_layout_instruction": THE BLUEPRINT. Contains 'strategy', 'image_position', and content 'zones'.
+    - "media_files": Reference list for image paths.
+
+# -----------------------------------------------------------------
+# 2. PREAMBLE (Standard)
+# -----------------------------------------------------------------
+preamble:
+  class: \documentclass[aspectratio=169, 10pt]{beamer}
+  packages:
     - \usepackage[utf8]{inputenc}
-    - \usepackage[T1]{fontenc}
     - \usepackage{graphicx}
-    - \usepackage{media9}
-    - \usepackage{hyperref}
+    - \usepackage{booktabs} 
     - \usepackage{amsmath}
     - \usepackage{amssymb}
-    - \usepackage{booktabs}
     - \usepackage{listings}
-    - \usepackage{textpos}
-  theme: \usetheme{Madrid}
+    - \usepackage{xcolor}
+  theme_config: |
+    \usetheme{Madrid}
+    \usecolortheme{default}
+    \setbeamerfont{title}{size=\Large, series=\bfseries}
+    \setbeamerfont{frametitle}{size=\large}
 
 # -----------------------------------------------------------------
-# 2. CONTENT RULES & CLEANING
+# 3. LAYOUT LOGIC (THE NEW CORE)
+# -----------------------------------------------------------------
+# The Python engine has already calculated the layout. Follow 'llm_layout_instruction' blindly.
+
+layout_rules:
+  
+  # STRATEGY A: COLUMNS
+  # Trigger: When json.llm_layout_instruction.strategy == "columns"
+  columns_strategy: |
+    1. Start \begin{frame}[fragile]{Title}
+    
+    2. TOP CONTENT (Intro):
+       - Check `zones.top_content`.
+       - If exists: Render items as standard text/itemize spanning full width.
+       - Insert a small vertical space after if needed.
+       
+    3. COLUMNS SETUP: 
+       - \begin{columns}[T]
+    
+    4. LEFT COLUMN (0.58\textwidth):
+       - If `zones.left_column` has text: Render items.
+       - If `image_position` == "left": Insert \includegraphics here.
+       
+    5. RIGHT COLUMN (0.38\textwidth):
+       - If `zones.right_column` has text: Render items.
+       - If `image_position` == "right": Insert \includegraphics here.
+       
+    6. Close: \end{columns} \end{frame}
+
+  # STRATEGY B: STANDARD FLOW
+  # Trigger: When json.llm_layout_instruction.strategy == "standard_flow"
+  flow_strategy: |
+    1. Start \begin{frame}[fragile]{Title}
+    
+    2. HEADER IMAGE (If `image_position` == "top"):
+       - \begin{center}\includegraphics[height=0.4\textheight]{...}\end{center}
+       
+    3. CONTENT:
+       - Iterate through `zones.flow_content`.
+       - Render text as itemize or plain text.
+       
+    4. FOOTER IMAGE (If `image_position` == "bottom" or "center" or "none" but media exists):
+       - \begin{figure}[h]\centering\includegraphics[width=0.7\textwidth]{...}\end{figure}
+       
+    5. Close: \end{frame}
+
+# -----------------------------------------------------------------
+# 4. CONTENT RENDERING RULES
 # -----------------------------------------------------------------
 content_rules:
-  - "ONLY use text explicitly present in the Markdown Input."
-  - "CLEANING: Ignore OCR artifacts like '플', '392', dates, or page numbers in footers."
-  - "Do NOT transcribe code snippets from images."
+  tables: |
+    - Detect "DETECTED_TABLE_START". 
+    - Render as: \begin{table}[]\centering\small \begin{tabular}{...} ... \end{tabular} \end{table}
+    - Use \toprule, \midrule, \bottomrule. Replace '|' with '&'.
+  
+  math: |
+    - Replace Unicode with LaTeX Math:
+    - "Ω" -> $\Omega$
+    - "Θ" -> $\Theta$
+    - "O(n)" -> $O(n)$
+    - "n²" -> $n^2$
+
+  code: |
+    - Detect code patterns (public, int, void, {, }).
+    - WRAP IN: \begin{lstlisting} ... \end{lstlisting}
+    - NEVER put lstlisting inside \itemize directly (close itemize first).
+
+  images: |
+    - Use the exact filename from `media_files`.
+    - If you encounter a text line like "[[IMAGE: filename.png]]" inside a zone:
+      -> REPLACE it with `\includegraphics[width=\linewidth]{filename.png}` immediately at that position.
+      -> Do not wrap it in figure if it is inside a column.
 
 # -----------------------------------------------------------------
-# 3. MATH & TABLES
-# -----------------------------------------------------------------
-math_rules:
-  - "Detect Greek letters (Ω, Θ, ω) -> Replace with $\\Omega$, $\\Theta$, $\\omega$."
-  - "Use standard math mode ($...$) for Big-O notation like $O(n^2)$."
-
-table_rules:
-  - "If you see a text-based table structure, convert it to a LaTeX 'tabular'."
-  - "Example: \begin{tabular}{c|c} ... \end{tabular}."
-  - "Use \small or \footnotesize to fit tables on the slide."
-
-# -----------------------------------------------------------------
-# 4. IMAGE HANDLING (CRITICAL FIX)
-# -----------------------------------------------------------------
-image_rules:
-  - "NEVER write a file path (e.g. 'extracted_media/image.png') as plain text on the slide."
-  - "YOU MUST wrap every image file in a LaTeX command."
-  - "Right/Left Layout: Use \begin{columns}..."
-  - "Standard Layout: Use \begin{center}\includegraphics[width=0.7\textwidth]{extracted_media/FILENAME}\end{center}"
-
-# -----------------------------------------------------------------
-# 5. LAYOUT LOGIC
-# -----------------------------------------------------------------
-layout_logic:
-  instruction: "Check 'LAYOUT & MEDIA DATA' at the bottom to decide placement."
-
-  right_column_layout:
-    condition: "If Layout Data says 'Place on RIGHT side' (x > 0.5):"
-    action: |
-      \begin{columns}
-        \begin{column}{0.5\textwidth} [Markdown Text] \end{column}
-        \begin{column}{0.5\textwidth} \centering \includegraphics[width=\linewidth]{extracted_media/FILENAME} \end{column}
-      \end{columns}
-
-  left_column_layout:
-    condition: "If Layout Data says 'Place on LEFT side' (x < 0.5):"
-    action: |
-      \begin{columns}
-        \begin{column}{0.5\textwidth} \centering \includegraphics[width=\linewidth]{extracted_media/FILENAME} \end{column}
-        \begin{column}{0.5\textwidth} [Markdown Text] \end{column}
-      \end{columns}
-
-# -----------------------------------------------------------------
-# 6. VIDEO HANDLING
-# -----------------------------------------------------------------
-videos:
-  rule: "If Layout Data lists a .mp4, insert it using media9."
-  code_block: |
-    \begin{center}
-    \includemedia[
-      width=0.8\linewidth, height=0.6\linewidth,
-      activate=pageopen,
-      addresource=extracted_media/FILENAME,
-      flashvars={source=extracted_media/FILENAME}
-    ]{\includegraphics[width=0.8\linewidth]{extracted_media/IMAGE_NAME}}{VPlayer.swf}
-    \end{center}
-
-# -----------------------------------------------------------------
-# 7. OUTPUT FORMAT
+# 5. OUTPUT FORMAT
 # -----------------------------------------------------------------
 output_format:
-  - "CRITICAL: Output RAW LaTeX code only."
-  - "No markdown blocks. No chatter."
-  - "Start with \documentclass. End with \end{document}."
+  - 'Return ONLY valid raw LaTeX code.'
+  - 'Start with \documentclass. End with \end{document}.'
